--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             </div>
           </div>
         </div>
+        <a href="https://github.com/MelaniaM8/weather-app">
+            Link to GitHub repository
+          </a>
       </div>
     </div>
     <script src="src/index.js"></script>
