weather icon setting

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
         <div id="description">
           Clear Sky 
         </div>
+        <div>
+        <img 
+        src="#"
+        alt="Clear"
+        id="icon"
+        class="icon-image"
+        />
+        </div>
         <div class="whole-degrees">
           <span class="temperature" id="temperature"> 10 </span>
           <span class="units">
