forecast JS HTML construction

--- a/index.html
+++ b/index.html
@@ -81,47 +81,7 @@
             <li class="weather-specifications">Wind: <span id="wind">8</span>km/h</li>
           </ul>
         </div>
-        <div class="row forecast-weather">
-          <div class="col-2">
-            <p class="forecast-day">Mon</p>
-            <img src="#" class="icon-temperature" />
-            <div class="forecast-temperature">12º</div>
-          </div>
-          <div class="col-2">
-            <div class="col-2">
-              <p class="forecast-day">Tue</p>
-              <img src="#" class="icon-temperature" />
-              <div class="forecast-temperature">12º</div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="col-2">
-              <p class="forecast-day">Wed</p>
-              <img src="#" class="icon-temperature" />
-              <div class="forecast-temperature">12º</div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="col-2">
-              <p class="forecast-day">Thu</p>
-              <img src="#" class="icon-temperature" />
-              <div class="forecast-temperature">12º</div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="col-2">
-              <p class="forecast-day">Fri</p>
-              <img src="#" class="icon-temperature" />
-              <div class="forecast-temperature">12º</div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="col-2">
-              <p class="forecast-day">Sat</p>
-              <img src="#" class="icon-temperature" />
-              <div class="forecast-temperature">12º</div>
-            </div>
-          </div>
+        <div class="row forecast-weather" id="forecast">
         </div>
         <a href="https://github.com/MelaniaM8/weather-app">
             Link to GitHub repository
