--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div>
         <img 
-        src="#"
+        src="http://openweathermap.org/img/wn/04@2x.png"
         alt="Clear"
         id="icon"
         class="icon-image"
@@ -82,12 +82,12 @@
           </ul>
         </div>
         <div class="row forecast-weather" id="forecast">
-        </div>
+    </div>
+    </div>
         <a href="https://github.com/MelaniaM8/weather-app">
             Link to GitHub repository
           </a>
       </div>
-    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
